...
        <scene sceneID="AKC-Ma-aex">
            <objects>
                <navigationController id="NMi-wh-wMX" customClass="NIMUINavigationController" customModule="iOS_NIM" customModuleProvider="target" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OWi-iA-yRu">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[State of the game]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R45-71-Jtb">
                                <rect key="frame" x="113.5" y="84" width="148.5" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="labelGameState"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="match.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="tMv-kq-h6u">
                                        <rect key="frame" x="0.0" y="0.0" width="15" height="194"/>
                                        <accessibility key="accessibilityConfiguration" identifier="match1">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="match.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="qsy-Pd-pKb">
                                        <rect key="frame" x="15" y="0.0" width="15" height="194"/>
                                        <accessibility key="accessibilityConfiguration" identifier="match2">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="match.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="wzK-X8-RGs">
                                        <rect key="frame" x="285" y="0.0" width="15" height="194"/>
                                        <accessibility key="accessibilityConfiguration" identifier="match20">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                <rect key="frame" x="185.5" y="325" width="152" height="38"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="playButton"/>
                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                <state key="normal" title="Remove X matches"/>
                                <connections>
...
                        <constraints>
                            <constraint firstItem="9C1-F5-NY2" firstAttribute="top" secondItem="2xy-SV-ol3" secondAttribute="bottom" constant="10" id="4jb-GA-Fsr"/>
                            <constraint firstItem="2xy-SV-ol3" firstAttribute="top" secondItem="R45-71-Jtb" secondAttribute="bottom" constant="20" id="5GW-6g-F4L"/>
                            <constraint firstItem="R45-71-Jtb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="F6t-rb-uoH"/>
                            <constraint firstItem="6s2-d3-nrc" firstAttribute="trailing" secondItem="2xy-SV-ol3" secondAttribute="trailing" id="L5n-4t-I0z"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="NIM game" id="cH5-ym-lHD">
                        <barButtonItem key="leftBarButtonItem" id="mhU-ZY-nZM">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="vIc-GS-PZH">
                                <rect key="frame" x="16" y="7" width="48" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="scoresButton"/>
                                <state key="normal" title="Scores"/>
                                <connections>
                                    <segue destination="kPW-pS-O9o" kind="show" identifier="showScoresListSegue" id="1Md-NR-e0N"/>
...
                                <rect key="frame" x="295" y="7" width="64" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="settingsButton"/>
                                <state key="normal" title="Réglages"/>
                                <connections>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B5r-yZ-f9j">
                                <rect key="frame" x="310" y="84" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="humanVsHumanSwitch"/>
                                <connections>
                                    <action selector="changeHumanVsHuman:" destination="zwz-lI-VaB" eventType="valueChanged" id="cmp-5U-M53"/>
...
                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BCI-aa-aEx">
                                <rect key="frame" x="238" y="163" width="121" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="player1NameTextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2kY-wC-XBX">
                                <rect key="frame" x="238" y="203" width="121" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="player2NameTextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="168" y="243" width="191" height="29"/>
                                <segments>
                                    <segment title="Player 1"/>
                                    <segment title="Player 2"/>
